<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.groupfive.fitnessapp.screens.workoutday.WorkoutDayViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:colorBackground"
        tools:context=".screens.workoutday.WorkoutDayFragment">

        <TextView
            android:id="@+id/dateView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:text="2022-11-02"
            android:textColor="?colorOnBackground"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/completedExercisesTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/completedExercisesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/completed_exercises"
            android:textColor="?colorOnBackground"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/workoutSessionsRecyclerView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/workoutSessionsRecyclerView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            android:background="?colorPrimaryContainer"
            app:layout_constraintBottom_toTopOf="@+id/plannedExercisesTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/completedExercisesTextView"
            app:layout_constraintVertical_bias="0.0">

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/plannedExercisesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/planned_exercises"
            android:textColor="?colorOnBackground"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/plannedSessionsRecyclerView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/workoutSessionsRecyclerView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/plannedSessionsRecyclerView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            android:background="?colorPrimaryContainer"
            app:layout_constraintBottom_toTopOf="@+id/floatingActionButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/plannedExercisesTextView"
            app:layout_constraintVertical_bias="0.0">

        </androidx.recyclerview.widget.RecyclerView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:clickable="true"
            android:contentDescription="@string/add_planned_workout_session_for_this_day"
            android:src="@android:drawable/ic_input_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>